# GeneSnap

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  docker-compose.yml  package-lock.json  vercel.json
api/: index.py  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/data/: clinicalVariants.tsv
backend/scripts/: import_variants.py
backend/scripts/data/: star_allele_rsids.json
backend/scripts/sources/: clinvar.py  gwas.py  pharmgkb.py  templates.py
backend/src/genesnap/: __init__.py  config.py  main.py
backend/src/genesnap/analysis/: analyzer.py
backend/src/genesnap/api/: enrichment.py  upload.py  variants.py
backend/src/genesnap/db/: connection.py  queries.py  seed.py
backend/src/genesnap/db/variants/: __init__.py  _types.py  health_risk_blood.py  health_risk_cancer.py  health_risk_cardio.py  health_risk_immune.py  health_risk_metabolic.py  health_risk_neuro.py  pharma_cyp.py  pharma_other.py  traits.py
backend/src/genesnap/models/: schemas.py
backend/src/genesnap/parsers/: base.py  twentythreeandme.py
backend/src/genesnap/services/: cache.py  clinvar.py  gwas.py  pubmed.py
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_parsers.py  test_seed_data.py  test_services.py
backend/tests/test_import/: test_clinvar.py  test_gwas.py  test_pharmgkb.py  test_seed.py  test_templates.py
backend/tests/test_import/fixtures/: sample_clinvar.vcf  sample_gwas.tsv  sample_pharmgkb.tsv
docs/: DESIGN.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  (+1 more)
(+21 files in other folders)
